[build-system]
requires = ['setuptools>=51.0','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'env_setup'
version = '0.1.0'
description = 'Python script to perform Google Colab/Jupyter Notebook environment setup tasks'
authors = [{name='K14aNB',email='kirnid4@gmail.com'}]
license = {text = 'Apache-2.0 license'}
readme = 'README.md'
dependencies = [ 'download_kaggle_dataset@git+https://github.com/K14aNB/download-kaggle-dataset']
requires-python = '>=3.7'

[project.urls]
homepage = 'https://github.com/K14aNB/setup-notebook-environment'
