[tool.poetry]
name = "env_setup"
version = "0.1.0"
description = "Python script to perform Google Colab/Jupyter Notebook environment setup tasks"
authors = ["K14aNB"]
license = "Apache 2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
PyYAML = "6.0.1"
download-kaggle-dataset = {git = "https://github.com/K14aNB/download-kaggle-dataset.git", rev = "main"}
mlflow-setup = {git = "https://github.com/K14aNB/mlflow-setup.git", rev = "main"}
gcloud-bigquery-setup = {git = "https://github.com/K14aNB/gcloud-bigquery-setup.git", rev = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
